[gd_scene load_steps=39 format=3 uid="uid://brwts8vxdm5oy"]

[ext_resource type="Script" path="res://Scripts/GameOver.gd" id="1_gxvu0"]
[ext_resource type="Shader" path="res://Scenes/Navigation/GameOver.gdshader" id="1_webkl"]
[ext_resource type="FontFile" uid="uid://c6u6sxct38sso" path="res://Assets/Font/Born2bSportyFS.otf" id="2_4b8u0"]
[ext_resource type="Texture2D" uid="uid://bv61cvl8n6o38" path="res://Assets/VFX/2_explosion/frames/1_0.png" id="3_nti2j"]
[ext_resource type="Texture2D" uid="uid://doklx7x7yxw54" path="res://Assets/VFX/Explosion SpriteSheet.png" id="4_hulgt"]
[ext_resource type="Texture2D" uid="uid://bkr67i017lbeh" path="res://Assets/VFX/Explosion 2 SpriteSheet.png" id="5_8untc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m8ya4"]
shader = ExtResource("1_webkl")
shader_parameter/amount = 2.5

[sub_resource type="AtlasTexture" id="AtlasTexture_10njn"]
atlas = ExtResource("4_hulgt")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq4mr"]
atlas = ExtResource("4_hulgt")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tq4n"]
atlas = ExtResource("4_hulgt")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_upbfn"]
atlas = ExtResource("4_hulgt")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdntw"]
atlas = ExtResource("4_hulgt")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq88q"]
atlas = ExtResource("4_hulgt")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcct4"]
atlas = ExtResource("4_hulgt")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq24w"]
atlas = ExtResource("4_hulgt")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oj6xr"]
atlas = ExtResource("4_hulgt")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbmt3"]
atlas = ExtResource("4_hulgt")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn31y"]
atlas = ExtResource("4_hulgt")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmdcv"]
atlas = ExtResource("4_hulgt")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiedg"]
atlas = ExtResource("4_hulgt")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yheop"]
atlas = ExtResource("4_hulgt")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7div"]
atlas = ExtResource("4_hulgt")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0xcb"]
atlas = ExtResource("4_hulgt")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayqlq"]
atlas = ExtResource("5_8untc")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r1og"]
atlas = ExtResource("5_8untc")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_63snu"]
atlas = ExtResource("5_8untc")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewj6i"]
atlas = ExtResource("5_8untc")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyyom"]
atlas = ExtResource("5_8untc")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ssq0"]
atlas = ExtResource("5_8untc")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqi1t"]
atlas = ExtResource("5_8untc")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mhi1"]
atlas = ExtResource("5_8untc")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxmu2"]
atlas = ExtResource("5_8untc")
region = Rect2(624, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nc5rq"]
atlas = ExtResource("5_8untc")
region = Rect2(672, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyj8p"]
atlas = ExtResource("5_8untc")
region = Rect2(720, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dak55"]
atlas = ExtResource("5_8untc")
region = Rect2(768, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gm2y"]
atlas = ExtResource("5_8untc")
region = Rect2(816, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n8a0"]
atlas = ExtResource("5_8untc")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ufw4j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_10njn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq4mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tq4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upbfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdntw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq88q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcct4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq24w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oj6xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbmt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn31y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmdcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiedg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yheop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7div")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0xcb")
}],
"loop": false,
"name": &"multiple_explosion",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayqlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r1og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63snu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewj6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyyom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ssq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqi1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mhi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxmu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nc5rq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyj8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dak55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gm2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n8a0")
}],
"loop": false,
"name": &"single_explosion",
"speed": 8.0
}]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gxvu0")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_m8ya4")
layout_mode = 1
offset_right = 1152.0
offset_bottom = 648.0

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
offset_right = 1152.0
offset_bottom = 647.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 60
theme_override_constants/margin_bottom = 50

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_4b8u0")
theme_override_font_sizes/font_size = 70
text = "YOU'RE FIRED!!!"
horizontal_alignment = 1

[node name="Highscore" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_4b8u0")
theme_override_font_sizes/font_size = 40
text = "Your Highscore: 1.000.000"

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_4b8u0")
theme_override_font_sizes/font_size = 35
text = "Your Score: 5.000"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 40

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_4b8u0")
theme_override_font_sizes/font_size = 35
text = "You destroyed the clock tower!
Because of you, all the robots of Burningham 
will never have a normal sleep rhythm again!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_4b8u0")
theme_override_font_sizes/font_size = 40
text = "Restart"

[node name="Spacer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ButtonContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 125

[node name="Main Menu" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_4b8u0")
theme_override_font_sizes/font_size = 40
text = "Main Menu"

[node name="Explosions" type="Sprite2D" parent="."]
position = Vector2(573, 271.705)
scale = Vector2(7.5, 7.5)
texture = ExtResource("3_nti2j")

[node name="SmallExplosion1" type="AnimatedSprite2D" parent="Explosions"]
texture_filter = 1
position = Vector2(-44.5333, 16.8393)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_ufw4j")
animation = &"multiple_explosion"

[node name="SmallExplosion2" type="AnimatedSprite2D" parent="Explosions"]
texture_filter = 1
position = Vector2(1.6, -5.96066)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_ufw4j")
animation = &"multiple_explosion"

[node name="SmallExplosion3" type="AnimatedSprite2D" parent="Explosions"]
texture_filter = 1
position = Vector2(45.2, 17.906)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_ufw4j")
animation = &"multiple_explosion"
frame_progress = 0.215954

[node name="BigExplosion" type="AnimatedSprite2D" parent="Explosions"]
texture_filter = 1
scale = Vector2(2.595, 2.595)
sprite_frames = SubResource("SpriteFrames_ufw4j")
animation = &"single_explosion"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/HBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/HBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
